non-overlay scrollbar fix

--- a/styles/hero.css
+++ b/styles/hero.css
@@ -60,7 +60,7 @@
     background: linear-gradient(transparent 0, var(--bg) 100%);
 
     position: absolute;
-    width: calc(100vw - 8rem);
+    width: calc(100% - 8rem);
 
     display: flex;
     flex-direction: row-reverse;
